--- a/mdptest/app/src/main/res/layout/activity_communications.xml
+++ b/mdptest/app/src/main/res/layout/activity_communications.xml
@@ -14,62 +14,54 @@
         android:layout_height="match_parent">
 
         <LinearLayout
-            android:layout_width="400dp"
-            android:layout_height="350dp"
+            android:layout_width="260dp"
+            android:layout_height="180dp"
             android:orientation="vertical">
 
             <TextView
                 android:id="@+id/messageReceivedTitleTextView"
                 android:layout_width="match_parent"
-                android:layout_height="250dp"
-                android:layout_marginStart="10dp"
-                android:layout_marginLeft="10dp"
-                android:layout_marginTop="10dp"
-                android:layout_marginEnd="10dp"
-                android:layout_marginRight="10dp"
-                android:paddingStart="20dp"
+                android:layout_height="90dp"
+                android:layout_marginStart="8dp"
+                android:layout_marginLeft="8dp"
+                android:layout_marginTop="8dp"
+                android:layout_marginEnd="8dp"
+                android:layout_marginRight="8dp"
+                android:paddingStart="10dp"
                 android:paddingEnd="5dp"
                 android:gravity="bottom"
                 android:scrollbars="vertical"
-                android:textSize="15sp"
+                android:textSize="13sp"
                 android:background="@drawable/rounded_corner"/>
 
 
-            <LinearLayout
+            <ImageButton
+                android:id="@+id/messageButton"
+                android:layout_width="40dp"
+                android:layout_height="32dp"
+                android:layout_gravity="end"
+                android:layout_marginTop="6dp"
+                android:layout_marginEnd="10dp"
+                android:foregroundGravity="center"
+                android:paddingStart="5dp"
+                android:paddingTop="2dp"
+                android:paddingEnd="5dp"
+                android:paddingBottom="2dp"
+                android:scaleType="fitCenter"
+                android:background="@drawable/custom_button2" />
+
+            <EditText
+                android:id="@+id/typeBoxEditText"
                 android:layout_width="match_parent"
-                android:layout_height="58dp"
-                android:orientation="horizontal">
-
-                <EditText
-                    android:id="@+id/typeBoxEditText"
-                    android:layout_width="302dp"
-                    android:layout_height="50dp"
-                    android:layout_marginStart="10dp"
-                    android:layout_marginTop="5dp"
-                    android:gravity="center|start"
-                    android:hint="Type something..."
-                    android:paddingStart="10dp"
-                    android:textSize="14sp"
-                    android:background="@drawable/rounded_corner"/>
-
-
-                <ImageButton
-                    android:id="@+id/messageButton"
-                    android:layout_width="75dp"
-                    android:layout_height="50dp"
-                    android:layout_marginStart="5dp"
-                    android:layout_marginTop="5dp"
-                    android:foregroundGravity="center"
-                    android:paddingStart="20dp"
-                    android:paddingTop="10dp"
-                    android:paddingEnd="20dp"
-                    android:paddingBottom="10dp"
-                    android:scaleType="fitCenter"
-                    android:background="@drawable/custom_button2"
-                    android:src="@drawable/pokemon_msg"/>
-
-
-            </LinearLayout>
+                android:layout_height="32dp"
+                android:layout_marginStart="10dp"
+                android:layout_marginEnd="10dp"
+                android:layout_marginTop="6dp"
+                android:gravity="center|start"
+                android:hint="Type something..."
+                android:paddingStart="8dp"
+                android:textSize="13sp"
+                android:background="@drawable/rounded_corner"/>
         </LinearLayout>
 
     </RelativeLayout>
