--- a/mdptest/app/src/main/res/layout/bluetooth.xml
+++ b/mdptest/app/src/main/res/layout/bluetooth.xml
@@ -13,8 +13,7 @@
         android:layout_marginStart="10dp"
         android:layout_marginLeft="20dp"
         android:layout_marginTop="10dp"
-        android:background="?android:attr/selectableItemBackground"
-        android:foreground="@drawable/back" />
+    android:background="?android:attr/selectableItemBackground" />
 
     <TextView
         android:id="@+id/connStatusTextView"
