--- a/mdptest/app/src/main/res/layout/controls.xml
+++ b/mdptest/app/src/main/res/layout/controls.xml
@@ -4,51 +4,52 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-    <LinearLayout
-        android:layout_width="400dp"
-        android:layout_height="350dp"
-        android:orientation="horizontal">
         <LinearLayout
-            android:layout_width="200dp"
-            android:layout_height="350dp"
+            android:layout_width="340dp"
+            android:layout_height="260dp"
+            android:orientation="horizontal">
+        <LinearLayout
+            android:layout_width="140dp"
+            android:layout_height="260dp"
             android:orientation="vertical">
             <LinearLayout
-                android:layout_width="180dp"
-                android:layout_height="350dp"
-                android:layout_marginStart="10dp"
-                android:layout_marginTop="5dp"
+                android:layout_width="110dp"
+                android:layout_height="260dp"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="6dp"
                 android:orientation="vertical">
 
                 <TextView
                     android:id="@+id/exploreTextView"
-                    android:layout_width="180dp"
-                    android:layout_height="40dp"
-                    android:layout_marginTop="10dp"
+                    android:layout_width="110dp"
+                    android:layout_height="28dp"
+                    android:layout_marginTop="6dp"
                     android:gravity="center"
                     android:text="TASK 1"
                     android:textColor="@color/black"
-                    android:textSize="20sp" />
+                    android:textSize="13sp" />
                 <!--                app:drawableStartCompat="@mipmap/left"
                     app:drawableEndCompat="@mipmap/right"-->
                 <!--                android:background="@drawable/statusbar"-->
                 <TextView
                     android:id="@+id/exploreTimeTextView2"
-                    android:layout_width="180dp"
-                    android:layout_height="40dp"
+                    android:layout_width="110dp"
+                    android:layout_height="28dp"
                     android:background="@color/white"
                     android:gravity="center"
                     android:text="00:00"
                     android:textColor="@color/black"
-                    android:textSize="26sp" />
+                    android:textSize="15sp" />
 
                 <ToggleButton
                     android:id="@+id/exploreToggleBtn2"
-                    android:layout_width="180dp"
+                    android:layout_width="110dp"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="20dp"
+                    android:layout_marginTop="6dp"
                     android:text="Exploration"
-                    android:textOff="TASK 1 START"
-                    android:textOn="STOP" />
+                    android:textOff="START"
+                    android:textOn="STOP"
+                    android:textSize="13sp" />
                 <!--                android:drawableEnd="@mipmap/qqqq"
                     android:background="@drawable/border_black_state"-->
 
@@ -56,10 +57,10 @@
                 <ImageButton
                     android:id="@+id/exploreResetImageBtn2"
                     style="@style/Widget.AppCompat.ImageButton"
-                    android:layout_width="50dp"
-                    android:layout_height="50dp"
-                    android:layout_marginStart="65dp"
-                    android:layout_marginTop="30dp"
+                    android:layout_width="32dp"
+                    android:layout_height="32dp"
+                    android:layout_marginStart="6dp"
+                    android:layout_marginTop="6dp"
                     android:background="@color/transparent" />
 
 
@@ -68,55 +69,56 @@
             </LinearLayout>
         </LinearLayout>
         <LinearLayout
-            android:layout_width="200dp"
-            android:layout_height="350dp"
+            android:layout_width="140dp"
+            android:layout_height="260dp"
             android:orientation="vertical">
             <LinearLayout
-                android:layout_width="180dp"
-                android:layout_marginStart="10dp"
-                android:layout_height="350dp"
-                android:layout_marginTop="5dp"
+                android:layout_width="110dp"
+                android:layout_marginStart="8dp"
+                android:layout_height="260dp"
+                android:layout_marginTop="6dp"
                 android:orientation="vertical">
 
                 <TextView
                     android:id="@+id/fastestTextView"
-                    android:layout_width="180dp"
-                    android:layout_height="40dp"
-                    android:layout_marginTop="10dp"
+                    android:layout_width="110dp"
+                    android:layout_height="28dp"
+                    android:layout_marginTop="6dp"
                     android:gravity="center"
                     android:text="TASK 2"
                     android:textColor="@color/black"
-                    android:textSize="20sp" />
+                    android:textSize="13sp" />
                 <!--                android:background="@drawable/statusbar"-->
                 <!--                app:drawableLeftCompat="@mipmap/left"
                                     app:drawableRightCompat="@mipmap/right"-->
                 <TextView
                     android:id="@+id/fastestTimeTextView2"
-                    android:layout_width="180dp"
-                    android:layout_height="40dp"
+                    android:layout_width="110dp"
+                    android:layout_height="28dp"
                     android:background="@color/white"
                     android:gravity="center"
                     android:textColor="@color/black"
                     android:text="00:00"
-                    android:textSize="26sp" />
+                    android:textSize="15sp" />
 
                 <ToggleButton
                     android:id="@+id/fastestToggleBtn2"
-                    android:layout_width="180dp"
+                    android:layout_width="110dp"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="20dp"
+                    android:layout_marginTop="6dp"
                     android:text="FASTEST"
-                    android:textOff="TASK 2 START"
-                    android:textOn="STOP" />
+                    android:textOff="START"
+                    android:textOn="STOP"
+                    android:textSize="13sp" />
                 <!--                android:drawableEnd="@mipmap/qqqq"
                                     android:background="@drawable/border_black_state"-->
                 <ImageButton
                     android:id="@+id/fastestResetImageBtn2"
                     style="@style/Widget.AppCompat.ImageButton"
-                    android:layout_width="50dp"
-                    android:layout_height="50dp"
-                    android:layout_marginStart="65dp"
-                    android:layout_marginTop="30dp"
+                    android:layout_width="32dp"
+                    android:layout_height="32dp"
+                    android:layout_marginStart="6dp"
+                    android:layout_marginTop="6dp"
                     android:background="@color/transparent"/>
                 <!--                app:srcCompat="@drawable/ic_refresh"-->
             </LinearLayout>
